--- a/manifest.json
+++ b/manifest.json
@@ -6,15 +6,20 @@
   "permissions": ["storage"],
   "browser_specific_settings": {
     "gecko": {
-      "id": "yandex-music-hotkeys@example.com",
-      "strict_min_version": "48.0"
+      "strict_min_version": "58.0"
     }
   },
   "browser_action": {
     "default_popup": "popup.html"
   },
-  "content_scripts": [{
-    "matches": ["*://music.yandex.by/*"],
+"content_scripts": [{
+    "matches": [
+        "*://music.yandex.ru/*",
+        "*://music.yandex.by/*",
+        "*://music.yandex.com/*",
+        "*://music.yandex.kz/*",
+        "*://music.yandex.ua/*"
+    ],
     "js": ["content.js"]
-  }]
+}]
 }
